--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   </head>
   <body>
     <div class="container">
+      <div class="link">
+        <a href="./grid.html">Grid Layout</a>
+      </div>
       <div class="wrapper">
         <div class="single__box">
           <img src="./assets/img/icon-sedans.svg" alt="sedans" />
